@@ -1,3 +1,8 @@
+2007-01-06 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Add a few more replacement suggestions, thanks to
+	  Teemu Likonen.
+
 2007-01-01 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Accept optional hyphens as in "syys-ilta" and "syy-silta".
